# SelTest

./: README.md  conftest.py  pyproject.toml
options/: option_base.py  option_one.py  option_three.py  option_two.py
tests/: test_one.py  test_three.py  test_two.py
