[project]
name = "seltest"
version = "0.1.0"
description = ""
authors = [
    {name = "Lotos",email = "shelkovnikova.da@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.28.1,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "scenarios (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
